# ProceduralAdventure

./: .gitignore  .gitmodules  CMakeLists.txt  Plan.md  ProceduralAdventure.data  ProceduralAdventure.js  ProceduralAdventure.wasm  build.sh  game_design.md  imgui.ini  index.html  serve.py  shell.html
lib/delaunator-c/: delaunator.c  delaunator.h
src/: app.c  app.h  imgui_sdl3.cpp  imgui_sdl3.h  main.c
src/game/: g_audio.c  g_audio.h  g_combat.c  g_combat.h  g_enemy.c  g_enemy.h  g_game.c  g_game.h  g_particles.c  g_particles.h  g_physics.c  g_physics.h  g_render.c  g_render.h  g_render_effects.c  g_render_effects.h  g_render_entities.c  g_render_entities.h  g_render_primitives.c  g_render_primitives.h  g_terrain.c  g_terrain.h  g_types.h  g_unit.c  g_unit.h  g_unit_gen.c  g_unit_gen.h
src/mapgen/: mg_elevation.c  mg_elevation.h  mg_island.c  mg_island.h  mg_map.c  mg_map.h  mg_mesh.c  mg_mesh.h  mg_points.c  mg_points.h  mg_raster.c  mg_raster.h  mg_rivers.c  mg_rivers.h  mg_types.h
src/utils/: q_util.h
